Deploy/QP8/Mainfests/patroni-endpoit.yml
apiVersion: v1
kind: Service
metadata:
  name: pgserver
  namespace: qp8
spec:
  type: ExternalName
  externalName: 10.10.40.100 #  Patroni Balancer IP
