Deploy/QP8/Mainfests/qp8-production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: conf-service
  name: conf-service
  namespace: qp8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conf-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: conf-service
        logging: enabled
    spec:
      containers:
      - env:
        - name: QpConfigurationPath
          value: /app/config/config.xml
        - name: Jwt__Secret
          valueFrom:
            configMapKeyRef:
              key: CONFIGURATION_SERVICE_SECRET
              name: conf-service-config
        image: qpcms/qp-configuration-service:1.1.1.0
        name: conf-service
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /app/config/config.xml
          subPath: config.xml
      volumes:
      - name: config-volume
        configMap:
          name: qp-app-config
          items:
          - key: config.xml
            path: config.xml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qp-storage
  namespace: qp8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qp-storage
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: qp-storage
    spec:
      containers:
      - image: qpcms/qp-storage:1.2.1.2
        imagePullPolicy: IfNotPresent
        name: qp-storage
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
        volumeMounts:
        - mountPath: /app/wwwroot
          name: library-volume
      volumes:
      - name: library-volume
        persistentVolumeClaim:
          claimName: qp-library
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qp
  namespace: qp8
spec:
  selector:
    matchLabels:
      app: qp
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: qp
        logging: enabled
    spec:
      containers:
      - env:
        - name: Properties__QpConfigUrl
          valueFrom:
            configMapKeyRef:
              key: CONFIGURATION_SERVICE_HOST
              name: qp-config
        - name: Properties__QpConfigToken
          valueFrom:
            configMapKeyRef:
              key: CONFIGURATION_SERVICE_TOKEN
              name: qp-config
        - name: Properties__TempDirectory
          value: /qptemp
        - name: Properties__EnableSignalR
          value: "false"
        - name: Properties__EnableArticleScheduler
          value: "true"
        - name: Properties__EnableCommonScheduler
          value: "true"
        image: qpcms/qp:8.7.0.3
        name: qp
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 256Mi
        volumeMounts:
        - mountPath: /qptemp
          name: temp-volume
        - mountPath: /qplibrary
          name: library-volume
        - mountPath: /etc/localtime
          name: time-config
          subPathExpr: $(TZ)
        - mountPath: /etc/timezone
          name: timezone-config
          subPath: TZ
      volumes:
      - name: temp-volume
        emptyDir: {}
      - name: library-volume
        persistentVolumeClaim:
          claimName: qp-library
      - name: time-config
        hostPath:
          path: /usr/share/zoneinfo
      - name: timezone-config
        configMap:
          name: qp-config
          items:
          - key: TZ
            path: TZ
---
apiVersion: v1
kind: Service
metadata:
  name: qp-storage
  namespace: qp8
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: qp-storage
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: conf-service
  namespace: qp8
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: conf-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: qp
  namespace: qp8
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: qp
  type: ClusterIP
